Apply minor improvements